styles and html

--- a/index.html
+++ b/index.html
@@ -1,29 +1,22 @@
 <!DOCTYPE html>
 <html lang="lu">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GoGo-Pizza - Заказать Го Го Пицца</title>
-
   <!-- предзагрузка шрифтов -->
   <link rel="preload" href="fonts/nunito-v26-cyrillic_latin-regular.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="fonts/nunito-v26-cyrillic_latin-600.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="fonts/nunito-v26-cyrillic_latin-900.woff2" as="font" type="font/woff2" crossorigin>
-
   <!-- загружаем стили -->
   <link href="style/normalize.min.css" rel="stylesheet">
   <link href="style/fonts.css" rel="stylesheet">
   <link href="style/globals.css" rel="stylesheet">
   <link href="style/styles.css" rel="stylesheet">
-
   <!-- фавиконка -->
   <link rel="icon" type="image/svg+xml" href="icon/favicon.svg" />
   <link rel="icon" type="image/png" href="icon/favicon-32x32.png" />
-
-  <title>Module3 M03L04 - GameOverProject Flex</title>
 </head>
-
 <body class="page">
 
   <header class="header">
@@ -40,9 +33,7 @@
     </div>
   </header>
 
-
   <main class="main">
-
     <section class="hero">
       <div class="container hero__container">
         <h1 class="hero__title">Лучшая пицца в&nbsp;городе</h1>
@@ -190,11 +181,49 @@
             </article>
           </li>
 
+          <li class="pizza__item">
+            <article class="pizza__card card">
+              <img class="card__image" src="img/pizza-margherita.png" alt="пицца маргарита">
+              <h3 class="card__title">Маргарита</h3>
+              <p class="card__info">
+                <span class="card__price">345 р</span>
+                <span>/</span>
+                <span class="card__weight">25 см</span>
+              </p>
+              <button class="card__button">Выбрать</button>
+            </article>
+          </li>
+
+          <li class="pizza__item">
+            <article class="pizza__card card">
+              <img class="card__image" src="img/pizza-margherita.png" alt="пицца маргарита">
+              <h3 class="card__title">Маргарита</h3>
+              <p class="card__info">
+                <span class="card__price">345 р</span>
+                <span>/</span>
+                <span class="card__weight">25 см</span>
+              </p>
+              <button class="card__button">Выбрать</button>
+            </article>
+          </li>
+
+          <li class="pizza__item">
+            <article class="pizza__card card">
+              <img class="card__image" src="img/pizza-margherita.png" alt="пицца маргарита">
+              <h3 class="card__title">Маргарита</h3>
+              <p class="card__info">
+                <span class="card__price">345 р</span>
+                <span>/</span>
+                <span class="card__weight">25 см</span>
+              </p>
+              <button class="card__button">Выбрать</button>
+            </article>
+          </li>
+
         </ul>
       </div>
     </section>
   </main>
-
 
   <footer class="footer">
     <div class="container">
@@ -211,5 +240,4 @@
     </div>
   </footer>
 </body>
-
 </html>
